--- a/CPRplus/changelog.txt
+++ b/CPRplus/changelog.txt
@@ -1,3 +1,12 @@
+CPRplus 3.0.5
+Feature Changes
+- Count-tier characters that do not use portrait sets with Frankish headgear reverted to wearing headgear frames 5-8 (temporary change until a better solution)
+- Baron-tier characters that use portrait sets with Frankish headgear now wear the same headgear as count-tier characters rather than courtiers
+
+Bug Fixes
+- Being a society member no longer removes the extra Frankish martial headgear layer
+- Unlanded spouse of a baron-tier character with Frankish headgear no longer wears inappropriate headgear 
+
 CPRplus 3.0.4
 New Features
 - Compatibility patch for vanilla Lover/Rival multiplayer layer
