--- a/CPRplus/changelog.txt
+++ b/CPRplus/changelog.txt
@@ -1,3 +1,8 @@
+CPRplus 3.0.7
+Bug Fixes
+- Adjusted Personal Combat Skill value necessary for special armor (EMF-only)
+
+
 CPRplus 3.0.6
 Bug Fixes
 - (SWMH-only) Moravian culture will now use the proper graphical culture
