--- a/CPRplus/changelog.txt
+++ b/CPRplus/changelog.txt
@@ -1,3 +1,8 @@
+CPRplus 3.0.8
+New Features
+- Added a new portrait set for the Avar culture
+
+
 CPRplus 3.0.7
 Bug Fixes
 - Adjusted Personal Combat Skill value necessary for special armor (EMF-only)
