--- a/CPRplus/changelog.txt
+++ b/CPRplus/changelog.txt
@@ -1,3 +1,8 @@
+CPRplus 3.1.1
+Bug fixes
+- Added the missing early-era Egyptian portraits
+
+
 CPRplus 3.1.0
 New Features
 - Incorporated vanilla Egyptian portraits (as is for now)
