--- a/CPRplus/changelog.txt
+++ b/CPRplus/changelog.txt
@@ -1,3 +1,8 @@
+CPRplus 3.1.3
+Bug Fixes
+- Adjusted the eye positions of the Bulgar portrait set
+
+
 CPRplus 3.1.2
 Feature Changes
 - Recolored the Egyptian face assets
