--- a/CPRplus/changelog.txt
+++ b/CPRplus/changelog.txt
@@ -1,6 +1,6 @@
 CPRplus 3.1.3
 Bug Fixes
-- Adjusted the eye positions of the Bulgar portrait set
+- Adjusted the eye positions of the Steppe and Bulgar portrait sets
 
 
 CPRplus 3.1.2
